--- a/_pages/index.html
+++ b/_pages/index.html
@@ -7,95 +7,183 @@ sub_title: Are you ready for take off?
 background_image: index.jpg
 ---
 
+
+
+
+
 <section class="intro">
+
   <div class="card  column-wrapper">
+
     <div class="column  column-1">
-      <i class="fas fa-plug  fa-3x" aria-hidden="true"></i>
+      <i class="fas fa-plug  fa-2x" aria-hidden="true"></i>
       <h4 class="column__title">API first</h4>
-      <p class="column__body">Our ultimate aim is a developer-friendly REST API. That's why we've designed the BEYOND API first, provising a sound basis to build an awesome product on top of it.</p>
+      <p class="column__body">Our ultimate aim is a developer-friendly REST API. That's why we've designed the BEYOND API first, providing a sound basis to build an awesome product on top of it.</p>
     </div>
+
     <div class="column  column-2">
-      <i class="fas fa-cubes  fa-3x" aria-hidden="true"></i>
+      <i class="fas fa-cubes  fa-2x" aria-hidden="true"></i>
       <h4 class="column__title">Microservices architecture</h4>
       <p class="column__body">We are developing for the cloud. That's why we've established an ecosystem of microservices for our highly scalable and flexible ecommerce platform.</p>
     </div>
+
     <div class="column  column-3">
-      <i class="fas fa-chart-line  fa-3x" aria-hidden="true"></i>
-      <h4 class="column__title">Growing functionality</h4>
-      <p class="column__body">BEYOND covers already a whole ecommerce infrastructure, and the functionality is ever growing! Be involved from the very start, and help shape our ecommerce platform.</p>
+      <i class="fas fa-chart-line  fa-2x" aria-hidden="true"></i>
+      <h4 class="column__title">Draw from the full source of ecommerce</h4>
+      <p class="column__body">No need to build an ecommerce solution yourself. We've got you covered with our BEYOND infrastructure, so that you can focus on your core business.</p>
     </div>
+
     <div class="column  column-4">
-      <i class="fas fa-heart  fa-3x" aria-hidden="true"></i>
+      <i class="fas fa-heart  fa-2x" aria-hidden="true"></i>
       <h4 class="column__title">Build apps with love</h4>
       <p class="column__body">Share your love for app development with us. Build apps in your language of choice, and empower our merchants with amazing integrations.</p>
     </div>
+
   </div>
+
 </section>
 
-<section class="steps">
+
+
+
+
+<section class="app">
+
   <div class="card  column-wrapper">
-    <h2 class="section__title">Empower online businesses worldwide with your app:</h2>
-    <div class="column  column-1">
-      <i class="fas  fa-book  fa-3x  fa-fw" aria-hidden="true"></i>
-      <h4 class="column__title">Get started</h4>
-      <p class="column__body"><a href="http://docs.beyondshop.cloud/" target="_blank">Read the docs</a> and learn about the BEYOND API, and get inspired by the possibilities it offers.</p>
-    </div>
-    <div class="column  column-2">
-      <i class="fas  fa-code  fa-3x  fa-fw" aria-hidden="true"></i>
-      <h4 class="column__title">Develop your app</h4>
-      <p class="column__body"><a href="https://signup.beyondshop.cloud/" target="_blank">Sign up for free</a> for a BEYOND shop, get yourself a token in the Developer area, and start developing your app.</p>
-    </div>
-    <div class="column  column-3">
-      <i class="fas  fa-paper-plane  fa-3x  fa-fw" aria-hidden="true"></i>
-      <h4 class="column__title">Launch it!</h4>
-      <p class="column__body">Once your app is tried and tested, let us know, and we clear the way for its publication in our store!</p>
-    </div>
-  </div>
-</section>
 
-<section class="about">
-  <div class="card  column-wrapper">
-    <div class="column  column-1">
-      <i class="fas  fa-rocket  fa-3x" aria-hidden="true"></i>
-    </div>
-    <div class="column  column-2">
-      <h2 class="section__title">Innovative ecommerce platform</h2>
-      <p class="section__body">With BEYOND, our customers can draw from the full source of ecommerce! Be it controlling different commerce channels, integrating with Website Builders, or creating an efficient connection of ERP and ecommerce - BEYOND means successful business!</p>
-    </div>
-  </div>
-</section>
+    <h3 class="section__title">Use our API to enhance your business solution</h3>
 
-<section class="news">
-    <h2 class="section__title">Tech News</h2>
-    <p class="section__body">We regularly share knowledge about the latest topics, and challenges that drive our work. See what we're up to, and check out our latest blog posts:</p>
-    <div class="carousel">
-      {% for post in site.posts limit:5 %}
-        <div class="carousel__item">
-            {% include components/post-card.html
-              category=post.category
-              header_image=post.header_image
-              title=post.title
-              authors=post.authors
-              date=post.date
-              url=post.url %}
-        </div>
-      {% endfor %}
-      <div class="carousel__item">
-        <div class="card--post  carousel__link">
-            <a href="/blog/">More posts ›</a>
-        </div>
+    <div class="column  column-1">
+      <i class="fas  fa-shopping-cart  fa-2x  fa-fw" aria-hidden="true"></i>
+      <div class="column__text">
+        <p class="column__body">Create your own buy button</p>
       </div>
     </div>
-    <div class="paginator">
-      <div class="prev">‹</div>
-      <div class="next">›</div>
+
+    <div class="column  column-2">
+      <i class="fas  fa-wrench  fa-2x  fa-fw" aria-hidden="true"></i>
+      <div class="column__text">
+        <p class="column__body">Integrate your website builder</p>
+      </div>
     </div>
+
+    <div class="column  column-3">
+      <i class="fas  fa-shopping-bag  fa-2x  fa-fw" aria-hidden="true"></i>
+      <div class="column__text">
+        <p class="column__body">Build your own storefront</p>
+      </div>
+    </div>
+
+    <div class="column  column-4">
+      <i class="fas  fa-compass  fa-2x  fa-fw" aria-hidden="true"></i>
+      <div class="column__text">
+        <p class="column__body">There's more</p>
+      </div>
+    </div>
+
+    <div class="column  column-4">
+      <p class="column__body">Interested? <a href="mailto:beyond-api@epages.com">Contact us.</a></p>
+    </div>
+
+  </div>
+
+
+
+  <div class="card  column-wrapper">
+
+    <h3 class="section__title">Empower online businesses worldwide with your app</h3>
+
+    <div class="column  column-1">
+      <i class="fas  fa-book  fa-2x  fa-fw" aria-hidden="true"></i>
+      <div class="column__text">
+        <h4 class="column__title">Get started</h4>
+        <p class="column__body"><a href="http://docs.beyondshop.cloud/" target="_blank">Read the docs</a>, learn about the BEYOND API, and get inspired by the possibilities it offers.</p>
+      </div>
+    </div>
+
+    <div class="column  column-2">
+      <i class="fas  fa-code  fa-2x  fa-fw" aria-hidden="true"></i>
+      <div class="column__text">
+        <h4 class="column__title">Develop your app</h4>
+        <p class="column__body"><a href="https://signup.beyondshop.cloud/" target="_blank">Sign up</a> for a BEYOND shop for free, get yourself a token, and start coding.</p>
+      </div>
+    </div>
+
+    <div class="column  column-3">
+      <i class="fas  fa-paper-plane  fa-2x  fa-fw" aria-hidden="true"></i>
+      <div class="column__text">
+        <h4 class="column__title">Launch it!</h4>
+        <p class="column__body">Once your done, <a href="mailto:beyond-api@epages.com">let us know</a>, and we clear the way for publication!</p>
+      </div>
+    </div>
+
+  </div>
+
 </section>
+
+
+
+
+
+<section class="news">
+
+  <h2 class="section__title">Tech News</h2>
+
+  <p class="section__body">We regularly share knowledge about the latest topics, and challenges that drive our work. See what we're up to, and check out our latest blog posts:</p>
+
+  <div class="carousel">
+
+    {% for post in site.posts limit:5 %}
+
+      <div class="carousel__item">
+        {% include components/post-card.html
+          category=post.category
+          header_image=post.header_image
+          title=post.title
+          authors=post.authors
+          date=post.date
+          url=post.url %}
+      </div>
+
+    {% endfor %}
+
+    <div class="carousel__item">
+      <div class="card--post  carousel__link">
+        <a href="/blog/">More posts ›</a>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="paginator">
+    <div class="prev">‹</div>
+    <div class="next">›</div>
+  </div>
+
+</section>
+
+
+
+
 
 <section class="more">
+
   <h2 class="section__title">More REST API docs</h2>
-  <p class="section__body">If you're developing for our Now and Base platform, <a href="/apps/">here's the REST documentation you'll need</a>.</p>
+  <p class="section__body">If you're developing for our Now and Base platform, <a href="/apps/">check the REST documentation </a>, and <a href="#signup">sign up for a test shop.</a></p>
+
 </section>
 
+
+
+
+
+<link rel="stylesheet" href="/assets/css/magnific-popup.css">
+<script src="/assets/js/jquery.magnific-popup.min.js"></script>
 <script src="/assets/slick/slick.min.js"></script>
 <script src="/assets/js/index.js"></script>
+
+
+
+
+
+<iframe id="frame--epages-now" style="display: none;" name="frame--epages-now" frameborder="0" allowtransparency="true" width="900px" height="720px"></iframe>
