Restyle index page

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -2,8 +2,7 @@
 layout: default
 permalink: /
 header_image: main.jpg
-title: The next generation <br>ecommerce infrastructure
-sub_title: Are you ready for take off?
+title: Go beyond <br> with the next generation ecommerce infrastructure
 background_image: index.jpg
 ---
 
@@ -12,6 +11,10 @@ background_image: index.jpg
 
 
 <section class="intro">
+
+  <h2 class="section__title">Powerful ecommerce platform</h2>
+
+  <p class="section__body">We've developed a highly flexible and extensible ecommerce API. Check it out!</p>
 
   <div class="card  column-wrapper">
 
@@ -46,12 +49,13 @@ background_image: index.jpg
 
 
 
+<section class="business">
 
-<section class="app">
+  <h2 class="section__title">The icing on your business solution</h2>
+
+  <p class="section__body">You focus on your business, we’ll top it off with excellent ecommerce functionality.</p>
 
   <div class="card  column-wrapper">
-
-    <h3 class="section__title">Use our API to enhance your business solution</h3>
 
     <div class="column  column-1">
       <i class="fas  fa-shopping-cart  fa-2x  fa-fw" aria-hidden="true"></i>
@@ -81,17 +85,22 @@ background_image: index.jpg
       </div>
     </div>
 
-    <div class="column  column-4">
-      <p class="column__body">Interested? <a href="mailto:beyond-api@epages.com">Contact us.</a></p>
-    </div>
-
   </div>
 
+  <a href="mailto:beyond-api@epages.com" class="cta  cta--ghost">Interested? Contact us.</a>
 
+</section>
+
+
+
+
+<section class="app">
+
+  <h2 class="section__title">Get your app idea ready for take off!</h2>
+
+  <p class="section__body">Empower hundreds of thousands of online shops worldwide with your app</p>
 
   <div class="card  column-wrapper">
-
-    <h3 class="section__title">Empower online businesses worldwide with your app</h3>
 
     <div class="column  column-1">
       <i class="fas  fa-book  fa-2x  fa-fw" aria-hidden="true"></i>
@@ -176,7 +185,7 @@ background_image: index.jpg
 
 
 
-
+<link rel="stylesheet" href="/assets/slick/slick.css"/>
 <link rel="stylesheet" href="/assets/css/magnific-popup.css">
 <script src="/assets/js/jquery.magnific-popup.min.js"></script>
 <script src="/assets/slick/slick.min.js"></script>
