Add slider sass

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -164,9 +164,9 @@ background_image: index.jpg
 
   </div>
 
-  <div class="paginator">
-    <div class="prev">‹</div>
-    <div class="next">›</div>
+  <div class="carousel__paginator">
+    <div class="prev"><i class="fas  fa-3x  fa-angle-left"></i></div>
+    <div class="next"><i class="fas  fa-3x  fa-angle-right"></i></div>
   </div>
 
 </section>
