Change wording and split card

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -2,7 +2,7 @@
 layout: default
 permalink: /
 header_image: main.jpg
-title: Go beyond <br> with the next generation ecommerce infrastructure
+title: The next generation<br>ecommerce infrastructure
 background_image: index.jpg
 ---
 
@@ -12,9 +12,9 @@ background_image: index.jpg
 
 <section class="intro">
 
-  <h2 class="section__title">Powerful ecommerce platform</h2>
+  <h2 class="section__title">Go beyond and explore the new ecommerce experience</h2>
 
-  <p class="section__body">We've developed a highly flexible and extensible ecommerce API. Check it out!</p>
+  <p class="section__body">We've developed a highly flexible and extensible ecommerce API. <a href="http://docs.beyondshop.cloud/" target="_blank">Check it out!</a></p>
 
   <div class="card  column-wrapper">
 
@@ -55,39 +55,37 @@ background_image: index.jpg
 
   <p class="section__body">You focus on your business, we’ll top it off with excellent ecommerce functionality.</p>
 
-  <div class="card  column-wrapper">
+  <div class="card-wrapper">
 
-    <div class="column  column-1">
-      <i class="fas  fa-shopping-cart  fa-2x  fa-fw" aria-hidden="true"></i>
-      <div class="column__text">
-        <p class="column__body">Create your own buy button</p>
-      </div>
-    </div>
-
-    <div class="column  column-2">
+    <div class="card">
       <i class="fas  fa-wrench  fa-2x  fa-fw" aria-hidden="true"></i>
       <div class="column__text">
-        <p class="column__body">Integrate your website builder</p>
+        <p class="column__body">Integrate ecommerce functionality into your website builder.</p>
       </div>
     </div>
 
-    <div class="column  column-3">
+    <div class="card">
       <i class="fas  fa-shopping-bag  fa-2x  fa-fw" aria-hidden="true"></i>
       <div class="column__text">
-        <p class="column__body">Build your own storefront</p>
+        <p class="column__body">Build your own storefront on top of our API.</p>
       </div>
     </div>
 
-    <div class="column  column-4">
-      <i class="fas  fa-compass  fa-2x  fa-fw" aria-hidden="true"></i>
+    <div class="card">
+      <i class="fas  fa-handshake  fa-2x  fa-fw" aria-hidden="true"></i>
       <div class="column__text">
-        <p class="column__body">There's more</p>
+        <p class="column__body">Benefit from a wide range of integration partners.</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <i class="fas  fa-envelope  fa-2x  fa-fw" aria-hidden="true"></i>
+      <div class="column__text">
+        <p class="column__body">More use cases? <a href="mailto:beyond-api@epages.com">Contact us.</a></p>
       </div>
     </div>
 
   </div>
-
-  <a href="mailto:beyond-api@epages.com" class="cta  cta--ghost">Interested? Contact us.</a>
 
 </section>
 
@@ -157,9 +155,11 @@ background_image: index.jpg
     {% endfor %}
 
     <div class="carousel__item">
-      <div class="card--post  carousel__link">
-        <a href="/blog/">More posts ›</a>
-      </div>
+      <a href="/blog/">
+        <div class="card  card--post  carousel__link">
+          <span>More posts <i class="fas  fa-xs  fa-angle-right"></i></span>
+        </div>
+      </a>
     </div>
 
   </div>
@@ -178,7 +178,7 @@ background_image: index.jpg
 <section class="more">
 
   <h2 class="section__title">More REST API docs</h2>
-  <p class="section__body">If you're developing for our Now and Base platform, <a href="/apps/">check the REST documentation </a>, and <a href="#signup">sign up for a test shop.</a></p>
+  <p class="section__body">If you're developing for our Now platform, <a href="/apps/">check the REST documentation </a>, and <a href="#signup">sign up for a test shop.</a></p>
 
 </section>
 
