--- a/_pages/about.html
+++ b/_pages/about.html
@@ -154,7 +154,7 @@ header_image: about.jpg
 </section>
 
 
-
+<link rel="stylesheet" href="/assets/slick/slick-theme.css"/>
 <link rel="stylesheet" href="/assets/slick/slick.css"/>
 <link rel="stylesheet" href="/assets/css/magnific-popup.css">
 <script src="/assets/js/jquery.magnific-popup.min.js"></script>
