--- a/_pages/index.html
+++ b/_pages/index.html
@@ -187,7 +187,7 @@ background_image: index.jpg
 
 
 
-
+<link rel="stylesheet" href="/assets/slick/slick-theme.css"/>
 <link rel="stylesheet" href="/assets/slick/slick.css"/>
 <link rel="stylesheet" href="/assets/css/magnific-popup.css">
 <script src="/assets/js/jquery.magnific-popup.min.js"></script>
