Make slider elements same height and fix exhibition card layout

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -156,9 +156,9 @@ background_image: index.jpg
 
     {% endfor %}
 
-    <div class="carousel__item">
+    <div class="carousel__item" style="justify-content: center; align-items: center;">
       <a href="/blog/">
-        <div class="card  card--post  carousel__link">
+        <div class="card--post  carousel__link">
           <span>More posts <i class="fas  fa-xs  fa-angle-right"></i></span>
         </div>
       </a>
