Make icon and channel clickable

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -36,20 +36,20 @@ header_image: about.jpg
       <li>
         <a href="https://twitter.com/{{site.twitter_username}}" target="_blank">
           <i class="fab  fa-fw  fa-twitter  fa-2x" aria-hidden="true"></i>
+          <p>Follow us on <span>Twitter</span></p>
         </a>
-        <p>Follow us on Twitter</p>
       </li>
       <li>
         <a href="https://youtube.com/channel/{{site.youtube_username}}">
           <i class="fab  fa-fw  fa-youtube  fa-2x" aria-hidden="true"></i>
+          <p>See what we're up to on <span>YouTube</span></p>
         </a>
-        <p>See what we're up to on YouTube</p>
       </li>
       <li>
         <a href="https://epages.com" target="_blank">
           <i class="fas  fa-fw  fa-globe  fa-2x" aria-hidden="true"></i>
+          <p>Visit our <span>company website</span></p>
         </a>
-        <p>Visit our company website</p>
       </li>
     </ul>
 
