Move general page header images to private folder

--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -3,7 +3,7 @@ layout: devjobs
 permalink: /devjobs/
 title: DevJobs
 main_title: We're hiring
-header_image: public/devjobs.jpg
+header_image: private/devjobs.jpg
 ---
 
 
