--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 permalink: /
-header_image: public/main.jpg
+header_image: private/main.jpg
 title: The next generation<br>ecommerce infrastructure
 ---
 
