--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -3,5 +3,5 @@ layout: blog
 permalink: /blog/
 title: DevBlog
 main_title: Developer blog
-header_image: public/blog.jpg
+header_image: private/blog.jpg
 ---
