Put check it out as a cta

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -13,7 +13,9 @@ title: The next generation<br>ecommerce infrastructure
 
   <h2 class="section__title" id="intro">Go beyond and explore the new ecommerce experience</h2>
 
-  <p class="section__body">We've developed a highly flexible and extensible ecommerce API. <a href="http://docs.beyondshop.cloud/" target="_blank">Check it out!</a></p>
+  <p class="section__body">We've developed a highly flexible and extensible ecommerce API.</p>
+
+  <a class="cta  cta--beyond" href="http://docs.beyondshop.cloud/" target="_blank">Check it out!</a>
 
   <div class="card  column-wrapper">
 
