--- a/_pages/index.html
+++ b/_pages/index.html
@@ -180,8 +180,19 @@ title: The next generation<br>ecommerce infrastructure
 
 <section class="more">
 
-  <h2 class="section__title" id="rest-docs">More REST API docs</h2>
-  <p class="section__body">If you're developing for our Now platform, <a href="/apps/">check the REST documentation </a>, and <a href="#signup">sign up for a test shop.</a></p>
+  <h2 class="section__title" id="rest-docs">ePages Now REST API docs</h2>
+  <p class="section__body">Develop for our Now platform and reach over 140.000 existing merchants worldwide. Benefit from:</p>
+    <p class="section__body"><a href="/apps/">Check the REST documentation </a>, and <a href="#signup">sign up for a test shop.</a></p>
+
+  <div class="tile__body">
+
+    <ul class="tile__list">
+      <li>Bulletproof architecture</li>
+      <li>Seamless App Store integration</li>
+      <li>Unlimited use cases</li>
+      <li>Comprehensive global customer base</li>
+    </ul>
+  </div>
 
 </section>
 
