Restyle more section

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -5,10 +5,6 @@ header_image: private/main.jpg
 title: The next generation<br>ecommerce infrastructure
 ---
 
-
-
-
-
 <section class="intro">
 
   <h2 class="section__title" id="intro">Go beyond and explore the new ecommerce experience</h2>
@@ -46,10 +42,6 @@ title: The next generation<br>ecommerce infrastructure
   </div>
 
 </section>
-
-
-
-
 
 <section class="business">
 
@@ -91,10 +83,6 @@ title: The next generation<br>ecommerce infrastructure
 
 </section>
 
-
-
-
-
 <section class="app">
 
   <h2 class="section__title" id="app">Get your app idea ready for take off!</h2>
@@ -130,10 +118,6 @@ title: The next generation<br>ecommerce infrastructure
   </div>
 
 </section>
-
-
-
-
 
 <section class="news">
 
@@ -174,19 +158,14 @@ title: The next generation<br>ecommerce infrastructure
 
 </section>
 
-
-
-
-
 <section class="more">
 
   <h2 class="section__title" id="rest-docs">ePages Now REST API docs</h2>
-  <p class="section__body">Develop for our Now platform and reach over 140.000 existing merchants worldwide. Benefit from:</p>
-    <p class="section__body"><a href="/apps/">Check the REST documentation </a>, and <a href="#signup">sign up for a test shop.</a></p>
 
-  <div class="tile__body">
+  <p class="section__body  section__margin--bottom">Develop for our Now platform and reach over 140.000 existing merchants worldwide. Benefit from:</p>
 
-    <ul class="tile__list">
+  <div class="section__center  section__margin--bottom">
+    <ul class="section__list">
       <li>Bulletproof architecture</li>
       <li>Seamless App Store integration</li>
       <li>Unlimited use cases</li>
@@ -194,10 +173,9 @@ title: The next generation<br>ecommerce infrastructure
     </ul>
   </div>
 
+  <p class="section__body"><a href="/apps/">Check the REST documentation </a>, and <a href="#signup">sign up for a test shop.</a></p>
+
 </section>
-
-
-
 
 <link rel="stylesheet" href="/assets/slick/slick-theme.css"/>
 <link rel="stylesheet" href="/assets/slick/slick.css"/>
@@ -205,9 +183,5 @@ title: The next generation<br>ecommerce infrastructure
 <script src="/assets/js/jquery.magnific-popup.min.js"></script>
 <script src="/assets/slick/slick.min.js"></script>
 <script src="/assets/js/index.js"></script>
-
-
-
-
 
 <iframe id="frame--epages-now" style="display: none;" name="frame--epages-now" frameborder="0" allowtransparency="true" width="900px" height="720px"></iframe>
