Change folder structure

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -2,7 +2,7 @@
 layout: blank
 permalink: 404.html
 title: 404
-background_image: 404.jpg
+background_image: common/404.jpg
 ---
 
 <div class="status">
