--- a/_pages/index.html
+++ b/_pages/index.html
@@ -11,7 +11,7 @@ title: The next generation<br>ecommerce infrastructure
 
   <p class="section__body">We've developed a highly flexible and extensible ecommerce API.</p>
 
-  <a class="cta  cta--beyond" href="http://docs.beyondshop.cloud/" target="_blank" onClick="ga(send, event, Docs, Click, Check Beyond Docs);">Check it out!</a>
+  <a class="cta  cta--beyond" href="http://docs.beyondshop.cloud/" target="_blank" onClick="gtag('event', 'click', { event_category: 'Docs', event_action: 'click', event_label: 'Check Beyond Docs' });">Check it out!</a>
 
   <div class="card  column-wrapper">
 
@@ -103,7 +103,7 @@ title: The next generation<br>ecommerce infrastructure
       <i class="fas  fa-code  fa-2x  fa-fw" aria-hidden="true"></i>
       <div class="column__text">
         <h4 class="column__title">Develop your app</h4>
-        <p class="column__body"><a href="https://signup.beyondshop.cloud/" target="_blank" onClick="ga(send, event, Sign up, Click, Beyond);">Sign up</a> for a BEYOND shop for free, get yourself a token, and start coding.</p>
+        <p class="column__body"><a href="https://signup.beyondshop.cloud/" target="_blank" onClick="gtag('event', 'click', { event_category: 'Sign up', event_action: 'click', event_label: 'Beyond' });">Sign up</a> for a BEYOND shop for free, get yourself a token, and start coding.</p>
       </div>
     </div>
 
@@ -185,7 +185,7 @@ title: The next generation<br>ecommerce infrastructure
          </li>
       </ul>
 
-      <p><a href="/apps/" onClick="ga(send, event, Docs, Click, Check Now Docs);">Check the REST documentation</a>, and <a href="#signup" onClick="ga(send, event, Sign up, Click, Now);">sign up for a test shop.</a></p>
+      <p><a href="/apps/" onClick="gtag('event', 'click', { event_category: 'Docs', event_action: 'click', event_label: 'Check Now Docs' });">Check the REST documentation</a>, and <a href="#signup" onClick="gtag('event', 'click', { event_category: Sign up, event_action: 'click', event_label: 'Now' });">sign up for a test shop.</a></p>
     </div>
   </div>
 </section>
