--- a/_pages/about.html
+++ b/_pages/about.html
@@ -93,7 +93,7 @@ header_image: private/about.jpg
 
             {% endif %}
 
-            <div class="card--event__image" style="background-image: url('/assets/img/pages/about/{{ event.image }}'' });"></div>
+            <div class="card--event__image" style="background-image: url('/assets/img/pages/about/{{ event.image }}');"></div>
 
             <div class="card--event__body">
               <h4 class="card--event__title">{{ event.title }}</h4>
