New: Add introduction section

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -6,6 +6,18 @@ header_image: private/about.jpg
 ---
 
 
+<section class="introduction">
+
+  <h1 class="section__title">We love ecommerce!</h1>
+
+  <p class="section__body">Our teams have one goal: Building excellent online shop software for our merchants.</p>
+
+</section>
+
+
+
+
+
 <section class="about">
 
   <h2 class="section__title" id="about">Who we are</h2>
